Added fade in style id to homepage elements in Index.cshtml

--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -14,8 +14,8 @@
     <div class="overlay">
         <div class="container">
             <div class="intro-text">
-                <h1 class="homepage-title-content">Lets Go SEA</h1>
-                <p class="homepage-tagline-content">The one-stop site to explore the beautiful neighborhoods of Seattle!</p>
+                <h1 class="homepage-title-content" id="fade-in">Lets Go SEA</h1>
+                <p class="homepage-tagline-content" id="fade-in">The one-stop site to explore the beautiful neighborhoods of Seattle!</p>
                 <a class="btn btn-primary btn-xl" role="button" asp-page="/Explore/Index">Enter</a>
             </div>
         </div>
